# BaseOscillations

./: Dockerfile  README.md  pyproject.toml  run.py
app/: frontend.py  main.py  oscillations.py  schemas.py
tests/: test_oscillations.py
