[tool.poetry]
name = "baseoscillations"
version = "0.1.0"
description = ""
authors = ["Raidzin <60663550+Raidzin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sympy = "^1.12"
scipy = "^1.11.4"
nicegui = "^1.4.6"
fastapi = "^0.105.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
